# plugin-sentry

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
nonebot_plugin_sentry/: __init__.py  compat.py  config.py
